<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="tvEmail">Email</string>
    <string name="tvpassword">Password</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnCancel">Cancel</string>
    <string name="tvFirstName">First Name</string>
    
    <string name="tvIDNumber">ID Number </string>
    
    <string name="btnSubmit1">Submit</string>
    <string name="btnCancel1">Cancel</string>
    
    <string name="tvNumber1">Number 1</string>
    <string name="tvNumber2">Number 2</string>
    
    <string name="tvResult">Result</string>
    <string name="btnadditon">Addition</string>
    <string name="btnsubtraction">Subtraction</string>
    <string name="btnDivision">Division</string>
    <string name="btnMultiplication">Multiplication</string>
    
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="hello_world">Hello world!</string>

</resources>
