<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:background="#7032" >

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="27dp"
        android:text="@string/tvEmail"
         android:textSize="18sp"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Cancel"
        android:layout_alignLeft="@+id/Submit"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:textColor="#ffffff"
       />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Email"
        android:layout_marginBottom="27dp"
        android:text="@string/tvpassword"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="119dp"
        android:text="@string/btnSubmit"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Submit"
        android:layout_marginRight="34dp"
        android:text="@string/btnCancel"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</RelativeLayout>